--- a/titlebar.html
+++ b/titlebar.html
@@ -9,7 +9,7 @@
       <span class="icon-bar"></span>               
       <span class="icon-bar"></span>            
     </button>
-    <a class="navbar-brand" href="#">组件crash展示平台</a>        
+    <p class="navbar-brand" >组件crash展示平台</p>        
   </div>        
 <div class="collapse navbar-collapse" >            
 <ul class="nav navbar-nav">               
