增加iPhone数据和添加数据接口

--- a/titlebar.html
+++ b/titlebar.html
@@ -15,8 +15,9 @@
 <ul class="nav navbar-nav">               
                
 <li ><a href="./navicrash.php">Android crash</a></li>
+<li ><a href="./iphone.php">Iphone crash</a></li>
 <li ><a href="./update.php">设置</a></li>
-
+<li ><a href="./insert.php">添加数据</a></li>
 <!--<li><a href="#">Contact</a></li>                
 -->            
 </ul>    
